--- a/src/app/features/profile/components/password-panel/password-panel.component.html
+++ b/src/app/features/profile/components/password-panel/password-panel.component.html
@@ -11,30 +11,40 @@
             </div>
             <form class="form" *ngIf="changePas">
                 <mat-form-field appearance="fill">
-                    <mat-label>Enter Your Current assword</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="curPasFormControl">
+                    <mat-label>Enter Your Current Password</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="curPasFormControl" [errorStateMatcher]="matcher">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
+                    <mat-error *ngIf="confirmPasFormControl.hasError('required') ">
+                        Please enter your current password
+                    </mat-error>
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Enter Your New Password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="newPasFormControl">
+                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="newPasFormControl" [errorStateMatcher]="matcher">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
+                    <mat-error *ngIf="confirmPasFormControl.hasError('required') ">
+                        Please enter your new password
+                    </mat-error>
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Confirm Your New Password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="confirmPasFormControl">
+                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="confirmPasFormControl" [errorStateMatcher]="matcher">
+                    
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
+                    <mat-error *ngIf="confirmPasFormControl.hasError('required') ">
+                        Please confirm a new password
+                    </mat-error>
                 </mat-form-field>
-                <button class="save-button button" id="save" (click)="add()">&#10003;</button>
+                <button class="save-button button" id="save" (click)="add()" >&#10003;</button>
             </form>
         </div>
     </mat-expansion-panel>
