--- a/src/app/features/profile/components/password-panel/password-panel.component.scss
+++ b/src/app/features/profile/components/password-panel/password-panel.component.scss
@@ -2,6 +2,7 @@ mat-expansion-panel {
     width: 40vw;
 }
 
+
 .info-item-container {
     display: flex;
     flex-direction: column;
@@ -17,4 +18,17 @@ mat-expansion-panel {
     display: flex;
     flex-direction: column;
     align-self: center;
+    margin: 20px 0;
+}
+
+mat-label{
+    font-size: 0.8em;
+}
+
+.button{
+align-self: center;
+padding: 5px 10px;
+width: 45px;
+font-size: 1.5em;
+cursor: pointer;
 }
