--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -29,10 +29,13 @@
     <div class="setting-container">
         <h2>Profile</h2>
         <input type="file">
-        <app-email-panel [userEmail]="user.email"></app-email-panel>
-        <app-password-panel [userPas]="user.password"></app-password-panel>
 
+            <app-email-panel class="panel" [userEmail]="user.email"></app-email-panel>
+            <app-password-panel class="panel" [userPas]="user.password"></app-password-panel>
+
+       
     </div>
+   
 </div>
 
 <app-footer></app-footer>
