Avatar panel WIP

--- a/src/app/features/profile/components/avatar-panel/avatar-panel.component.html
+++ b/src/app/features/profile/components/avatar-panel/avatar-panel.component.html
@@ -1,1 +1,23 @@
-<p>avatar-panel works!</p>
+<mat-accordion>
+    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Avatar
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="info-item-container">
+            <div class="info-item">
+                <button (click)="changeAvatar = !changeAvatar" mat-raised-button>Change avatar</button>
+                <button  mat-raised-button>Remove avatar</button>
+
+            </div>
+            <form class="form" *ngIf="changeAvatar">
+                <mat-form-field>
+                    <mat-label>Change avatar:</mat-label>
+                    <input type="file" matInput [formControl]="avatarFormControl">
+                </mat-form-field>
+                <button class="save-button button" id="save" (click)="add()">&#10003;</button>
+            </form>
+        </div>
+    </mat-expansion-panel>
+</mat-accordion>
