fix password panel and email panel style

--- a/src/app/features/profile/components/email-panel/email-panel.component.scss
+++ b/src/app/features/profile/components/email-panel/email-panel.component.scss
@@ -9,6 +9,7 @@ mat-expansion-panel{
     .info-item{
         display: flex;
         justify-content: space-around;
+        margin-bottom: 20px;
     }
 }
 
