--- a/src/app/features/profile/components/password-panel/password-panel.component.html
+++ b/src/app/features/profile/components/password-panel/password-panel.component.html
@@ -9,42 +9,88 @@
             <div class="info-item">
                 <button (click)="changePas = !changePas" mat-raised-button>Change password</button>
             </div>
-            <form class="form" *ngIf="changePas">
+            <form class="form" *ngIf="changePas" [formGroup]="changePasForm">
                 <mat-form-field appearance="fill">
                     <mat-label>Enter Your Current Password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="curPasFormControl" [errorStateMatcher]="matcher">
+                    <input matInput [type]="hide ? 'password' : 'text'" formControlName="currentPass">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
-                    <mat-error *ngIf="confirmPasFormControl.hasError('required') ">
-                        Please enter your current password
+                    <mat-error *ngIf="currentPass.invalid && currentPass.errors?.['required']">The password field is
+                        required</mat-error>
+
+                    <mat-error *ngIf="currentPass.invalid && currentPass.errors?.['minlength']">The password should be
+                        at
+                        least 6
+                        characters</mat-error>
+
+                    <mat-error *ngIf=" currentPass.invalid && currentPass.errors?.['maxlength']">The password should be
+                        maximum 24 characters
+                    </mat-error>
+
+                    <mat-error *ngIf="currentPass.invalid
+                      && !currentPass.errors?.['minlength']
+                      && currentPass.errors?.['pattern']">Must have at least one uppercase letter, number and special
+                        symbol
                     </mat-error>
                 </mat-form-field>
+
                 <mat-form-field>
                     <mat-label>Enter Your New Password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="newPasFormControl" [errorStateMatcher]="matcher">
+                    <input matInput [type]="hide ? 'password' : 'text'" formControlName="newPass">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
-                    <mat-error *ngIf="confirmPasFormControl.hasError('required') ">
-                        Please enter your new password
+                    <mat-error *ngIf="newPass.invalid && newPass.errors?.['required']">The password field is
+                        required</mat-error>
+
+                    <mat-error *ngIf="newPass.invalid && newPass.errors?.['minlength']">The password should be
+                        at
+                        least 6
+                        characters</mat-error>
+
+                    <mat-error *ngIf=" newPass.invalid && newPass.errors?.['maxlength']">The password should be
+                        maximum 24 characters
+                    </mat-error>
+
+                    <mat-error *ngIf="newPass.invalid
+                      && !newPass.errors?.['minlength']
+                      && newPass.errors?.['pattern']">Must have at least one uppercase letter, number and special
+                        symbol
                     </mat-error>
                 </mat-form-field>
+
+
                 <mat-form-field>
                     <mat-label>Confirm Your New Password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" [formControl]="confirmPasFormControl" [errorStateMatcher]="matcher">
-                    
+                    <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmPass">
+
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
-                    <mat-error *ngIf="confirmPasFormControl.hasError('required') ">
-                        Please confirm a new password
+                    <mat-error *ngIf="confirmPass.invalid && confirmPass.errors?.['required']">The password field is
+                        required</mat-error>
+
+                    <mat-error *ngIf="confirmPass.invalid && confirmPass.errors?.['minlength']">The password should be
+                        at
+                        least 6
+                        characters</mat-error>
+
+                    <mat-error *ngIf=" confirmPass.invalid && confirmPass.errors?.['maxlength']">The password should be
+                        maximum 24 characters
                     </mat-error>
+
+                    <mat-error *ngIf="confirmPass.invalid
+                      && !confirmPass.errors?.['minlength']
+                      && confirmPass.errors?.['pattern']">Must have at least one uppercase letter, number and special
+                        symbol
+                    </mat-error>
+
                 </mat-form-field>
-                <button class="save-button button" id="save" (click)="add()" >&#10003;</button>
+                <button class="save-button button" id="save" (click)="add()">&#10003;</button>
             </form>
         </div>
     </mat-expansion-panel>
