--- a/src/app/features/profile/components/additional-panel/additional-panel.component.scss
+++ b/src/app/features/profile/components/additional-panel/additional-panel.component.scss
@@ -16,13 +16,14 @@ mat-expansion-panel {
 form {
     display: flex;
     align-self: center;
+    flex-direction: column;
 }
 
 .button {
     align-self: center;
     padding: 5px 10px;
     width: 45px;
-    margin: 0 10px;
+    margin: 20px;
     font-size: 1.5em;
     cursor: pointer;
 }
