--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -8,15 +8,15 @@
             <div class="user-info">
                 <div class="user-info-item">
                     <h2>Name:</h2>
-                    <h2>{{userName}}</h2>
+                    <h2>{{user.name}}</h2>
                 </div>
                 <div class="user-info-item">
                     <h3>Birthday:</h3>
-                    <h3>{{birthday}}</h3>
+                    <h3>{{user.birthday}}</h3>
                 </div>
                 <div class="user-info-item">
                     <p>Country:</p>
-                    <p>{{country}}</p>
+                    <p>{{user.country}}</p>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
         <app-avatar-panel class="panel"></app-avatar-panel>
         <app-email-panel class="panel" [userEmail]="user.email"></app-email-panel>
         <app-password-panel class="panel" [userPas]="user.password"></app-password-panel>
-
+        <app-additional-panel class="panel"></app-additional-panel>
 
     </div>
 
