fix: fix images paths

--- a/src/app/features/questionnaires/questionnaires.component.html
+++ b/src/app/features/questionnaires/questionnaires.component.html
@@ -1,19 +1,21 @@
 <app-header></app-header>
 <div class="container">
-  <img class="image" src="../../../assets/img/questionnaire-page.jpeg" alt="questionnaires page image" width="800">
+  <img class="image" src="assets/img/questionnaire-page.jpeg" alt="questionnaires page image" width="800">
 
   <div class="questionnaires">
     <mat-card routerLink="/questionnaires/1">
       <mat-card-header>
         <mat-card-title>Beck scale</mat-card-title>
       </mat-card-header>
-      <mat-card-content>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minima doloremque quasi omnis aperiam perspiciatis perferendis laboriosam voluptatem placeat sed!</mat-card-content>
+      <mat-card-content>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minima doloremque quasi
+        omnis aperiam perspiciatis perferendis laboriosam voluptatem placeat sed!</mat-card-content>
     </mat-card>
     <mat-card routerLink="/questionnaires/2">
       <mat-card-header>
         <mat-card-title>The method of express diagnostics of neurosis by K. Heck and H. Hess</mat-card-title>
       </mat-card-header>
-      <mat-card-content>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minima doloremque quasi omnis aperiam perspiciatis perferendis laboriosam voluptatem placeat sed!</mat-card-content>
+      <mat-card-content>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minima doloremque quasi
+        omnis aperiam perspiciatis perferendis laboriosam voluptatem placeat sed!</mat-card-content>
     </mat-card>
   </div>
 
