--- a/src/app/features/restore-password/restore-password.component.html
+++ b/src/app/features/restore-password/restore-password.component.html
@@ -4,7 +4,7 @@
 </mat-toolbar>
 
 <div class="container">
-  <img src="../../../assets/img/forgot-password.jpeg" alt="" width="600">
+  <img src="assets/img/forgot-password.jpeg" alt="" width="600">
   <form class="form" (submit)="submit($event)" [formGroup]="restoreForm">
     <mat-form-field appearance="outline">
       <mat-label>Enter your email</mat-label>
