--- a/src/app/features/signin/signin.component.html
+++ b/src/app/features/signin/signin.component.html
@@ -50,5 +50,5 @@
     <a routerLink="/restore" class="reset">Forgot password?</a>
   </form>
 
-  <img src="../../../assets/img/login-page.jpeg" alt="login main image" width="700">
+  <img src="assets/img/login-page.jpeg" alt="login main image" width="700">
 </div>
