--- a/src/app/features/signup/signup.component.html
+++ b/src/app/features/signup/signup.component.html
@@ -4,7 +4,7 @@
 </mat-toolbar>
 
 <div class="container">
-  <img src="../../../assets/img/register-page.jpeg" alt="login main image" width="800">
+  <img src="assets/img/register-page.jpeg" alt="login main image" width="800">
   <form class="form" (submit)="submit($event)" [formGroup]="registerForm">
     <mat-form-field appearance="outline">
       <mat-label>Enter your name</mat-label>
