--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -1,11 +1,11 @@
-<app-header></app-header>
+<app-header [context]="'homepage'"></app-header>
 <div class="container-body">
     <div class="go-testing-container">
         <div class="image-comtainer">
             <img class="home-image" src="assets/img/home-page.jpeg">
         </div>
         <div class="button-container">
-            <app-started-button routerLink="/questionnaire"></app-started-button>
+            <app-started-button routerLink="/questionnaires"></app-started-button>
         </div>
     </div>
 
