--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [context]="'profile'"></app-header>
 <div class="container-body">
     <div class="profile-info-container">
         <div class="image-container">
