--- a/src/app/features/trainings/trainings.component.html
+++ b/src/app/features/trainings/trainings.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [context]="'trainings'"></app-header>
 <div class="container-body">
     <div class="image-container">
         <img src="../../../assets/img/training.jpeg" alt="">
