--- a/src/app/features/result/result.component.html
+++ b/src/app/features/result/result.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container">
-  <img class="image" src="../../../assets/img/result-page.jpeg`" alt="result image" width="600px">
+  <img class="image" src="assets/img/result-page.jpeg" alt="result image" width="600px">
 
   <div class="cards">
     <mat-card>
@@ -27,7 +27,7 @@
       </p>
 
       <mat-card-footer>
-        <button mat-raised-button color="primary">Send on email</button>
+        <button mat-raised-button color="primary" (click)="openEmailDialog()">Send on email</button>
       </mat-card-footer>
     </mat-card>
   </div>
