fix: update signin page

--- a/src/app/features/signin/signin.component.html
+++ b/src/app/features/signin/signin.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar>
+  <a class="homepage-link" routerLink="/">Application</a>
   <span class="example-spacer"></span>
   <a routerLink="/register" class="button-signup" mat-raised-button>Sign up</a>
 </mat-toolbar>
