fix: update signup page

--- a/src/app/features/signup/signup.component.html
+++ b/src/app/features/signup/signup.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar>
+  <a class="homepage-link" routerLink="/">Application</a>
   <span class="example-spacer"></span>
   <a routerLink="/login" class="button-signup" mat-raised-button>Sign in</a>
 </mat-toolbar>
