added functionality on remove avatar button

--- a/src/app/features/profile/components/avatar-panel/avatar-panel.component.html
+++ b/src/app/features/profile/components/avatar-panel/avatar-panel.component.html
@@ -8,14 +8,12 @@
         <div class="info-item-container">
             <div class="info-item">
                 <button (click)="changeAvatar = !changeAvatar" mat-raised-button>Change avatar</button>
-                <button mat-raised-button>Remove avatar</button>
+                <button mat-raised-button (click) = "remove()">Remove avatar</button>
 
             </div>
             <form class="form" *ngIf="changeAvatar">
                 <mat-form-field appearance="fill">
-
                     <ngx-mat-file-input [formControl]="avatarFormControl" (change)="add()"></ngx-mat-file-input>
-
                 </mat-form-field>
             </form>
         </div>
