fix button id on password and email panel

--- a/src/app/features/profile/components/email-panel/email-panel.component.html
+++ b/src/app/features/profile/components/email-panel/email-panel.component.html
@@ -19,7 +19,7 @@
                         Please enter a valid email address
                     </mat-error>
                 </mat-form-field>
-                <button class="save-button button" id="save" (click)="add()">&#10003;</button>
+                <button class="save-button button" id="saveEmail" (click)="add()">&#10003;</button>
             </form>
         </div>
     </mat-expansion-panel>
