--- a/src/app/features/profile/components/password-panel/password-panel.component.html
+++ b/src/app/features/profile/components/password-panel/password-panel.component.html
@@ -90,7 +90,7 @@
                     </mat-error>
 
                 </mat-form-field>
-                <button class="save-button button" id="save" (click)="add()">&#10003;</button>
+                <button class="save-button button" id="savePass" (click)="add()">&#10003;</button>
             </form>
         </div>
     </mat-expansion-panel>
