--- a/src/app/features/profile/components/password-panel/password-panel.component.html
+++ b/src/app/features/profile/components/password-panel/password-panel.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="closePanel()">
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Password
