Aded home page link to sing up and sing in headers

--- a/src/app/features/signup/signup.component.html
+++ b/src/app/features/signup/signup.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar>
   <span class="example-spacer"></span>
+  <div class="link-menu">
+    <a routerLink="/" class="page-link" mat-button color="primary">Home page</a>
+  </div>
   <a routerLink="/login" class="button-signup" mat-raised-button>Sign in</a>
 </mat-toolbar>
 
