--- a/src/app/features/signin/signin.component.scss
+++ b/src/app/features/signin/signin.component.scss
@@ -1,4 +1,4 @@
-$basic-color: #C1E9FC;
+$basic-color: #c1e9fc;
 
 .example-spacer {
   flex: 1 1 auto;
@@ -19,6 +19,16 @@ $basic-color: #C1E9FC;
   a {
     font-family: "Cormorant Garamond", serif;
   }
+
+  .link-menu {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+
+    .page-link {
+      font-size: 1em;
+    }
+  }
 }
 
 .container {
@@ -34,7 +44,7 @@ img {
   justify-self: flex-start;
 }
 
-.example-container mat-form-field+mat-form-field {
+.example-container mat-form-field + mat-form-field {
   margin-left: 8px;
 }
 
