--- a/src/app/features/signup/signup.component.scss
+++ b/src/app/features/signup/signup.component.scss
@@ -19,6 +19,16 @@ $basic-color: #C1E9FC;
   a {
     font-family: "Cormorant Garamond", serif;
   }
+
+  .link-menu {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+
+    .page-link {
+      font-size: 1em;
+    }
+  }
 }
 
 .container {
