--- a/src/app/features/questionnaire/components/form/form.component.scss
+++ b/src/app/features/questionnaire/components/form/form.component.scss
@@ -13,7 +13,7 @@
   max-width: 71ch;
 }
 
-.options {
+.answers {
   display: grid;
   gap: 10px;
 
@@ -22,7 +22,7 @@
   list-style-type: none;
 }
 
-.option {
+.answer {
   padding: 10px;
 
   border: 1px solid lightblue;
