--- a/src/app/features/result/result.component.html
+++ b/src/app/features/result/result.component.html
@@ -11,7 +11,7 @@
     </mat-card>
 
     <mat-card>
-      <mat-card-title class="content-title">Your result {{ score$ | async }}</mat-card-title>
+      <mat-card-title class="content-title">Your result</mat-card-title>
 
       <p class="result">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, optio. Inventore, ipsum
         praesentium et earum nihil nisi culpa accusamus exercitationem repudiandae magni laboriosam necessitatibus
