--- a/src/app/features/signup/signup.component.html
+++ b/src/app/features/signup/signup.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar>
+  <a class="homepage-link" routerLink="/">Application</a>
   <span class="example-spacer"></span>
   <div class="link-menu">
     <a routerLink="/" class="page-link" mat-button color="primary">Home page</a>
