--- a/src/app/features/result/components/email-dialog/email-dialog.component.html
+++ b/src/app/features/result/components/email-dialog/email-dialog.component.html
@@ -3,6 +3,18 @@
 <div mat-dialog-content>
   <form [formGroup]="emailForm" (ngSubmit)="submit()">
     <mat-form-field appearance="outline">
+      <mat-label>Enter your name</mat-label>
+
+      <input matInput formControlName="name" required>
+
+      <mat-error *ngIf="name.invalid && name.errors?.['required']">The name field is required
+      </mat-error>
+
+      <mat-error *ngIf="name.invalid && name.errors?.['minlength']">The name should be at least 2
+        characters</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
       <mat-label>Enter your email</mat-label>
 
       <input matInput formControlName="email" required>
