--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,13 +1,19 @@
 <mat-toolbar>
   <span>Application</span>
   <div class="link-menu">
-  <a routerLink="/" class="page-link" mat-button color="primary" *ngIf="context !== 'homepage'">Home page</a>
-  <a routerLink="/profile" class="page-link" mat-button color="primary" *ngIf="context !== 'profile'">Profile</a>
-  <a routerLink="/trainings" class="page-link" mat-button color="primary" *ngIf="context !== 'trainings'">Trainings</a>
+    <a routerLink="/" class="page-link" mat-button color="primary" *ngIf="context !== 'homepage'">Home page</a>
+    <a routerLink="/trainings" class="page-link" mat-button color="primary"
+      *ngIf="context !== 'trainings'">Trainings</a>
 
-</div>
+  </div>
   <span class="example-spacer"></span>
 
+  <ng-container *ngIf="signinService.isLoggedIn; else authButtons">
+    <a routerLink="/profile" mat-raised-button *ngIf="context !== 'profile'">Profile</a>
+  </ng-container>
+</mat-toolbar>
+
+<ng-template #authButtons>
   <a routerLink="/login" class="button-signin" mat-raised-button color="primary">Sign in</a>
   <a routerLink="/register" class="button-signup" mat-raised-button>Sign up</a>
-</mat-toolbar>
+</ng-template>
