--- a/src/app/features/result/result.component.html
+++ b/src/app/features/result/result.component.html
@@ -1,10 +1,12 @@
 <app-header [context]="'result'"></app-header>
+
 <div class="container">
   <img class="image" src="assets/img/result-page.jpeg" alt="result image" width="600px">
 
   <div class="cards">
     <mat-card>
       <mat-card-title class="card-title">Beck scale</mat-card-title>
+
       <mat-card-content>
         <a mat-raised-button color="primary" (click)="navitageToQuestionnairePage()">Take test again</a>
       </mat-card-content>
@@ -32,3 +34,5 @@
     </mat-card>
   </div>
 </div>
+
+<app-footer></app-footer>
