feat: impletent login

--- a/src/app/features/confirm-account/confirm-account.component.html
+++ b/src/app/features/confirm-account/confirm-account.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>Your account has been successfully confirmed</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>You will be automatically redirected to an account in {{ (countDown$ | async) ?? 3 }} seconds.</p>
+      <p>You will be automatically redirected to an account...</p>
     </mat-card-content>
   </mat-card>
 </div>
