fix style and add result-history component

--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -34,6 +34,7 @@
                 </div>
             </mat-tab>
             <mat-tab label="Results history">
+                <app-result-history></app-result-history>
             </mat-tab>
         </mat-tab-group>
 
