fix: update header

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,10 +1,9 @@
 <mat-toolbar>
-  <span>Application</span>
+  <a routerLink="/" class="page-link" mat-button color="primary">Application</a>
+  
   <div class="link-menu">
-    <a routerLink="/" class="page-link" mat-button color="primary" *ngIf="context !== 'homepage'">Home page</a>
     <a routerLink="/trainings" class="page-link" mat-button color="primary"
       *ngIf="context !== 'trainings'">Trainings</a>
-
   </div>
   <span class="example-spacer"></span>
 
