--- a/src/app/features/signin/signin.component.html
+++ b/src/app/features/signin/signin.component.html
@@ -1,9 +1,8 @@
 <mat-toolbar>
-  <a class="homepage-link" routerLink="/">Application</a>
-  <span class="example-spacer"></span>
   <div class="link-menu">
-    <a routerLink="/" class="page-link" mat-button color="primary">Home page</a>
+    <a routerLink="/" class="page-link" mat-button color="primary">Application</a>
   </div>
+  <span class="example-spacer"></span>
   <a routerLink="/register" class="button-signup" mat-raised-button>Sign up</a>
 </mat-toolbar>
 
