--- a/src/app/features/signup/signup.component.html
+++ b/src/app/features/signup/signup.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar>
-  <a class="homepage-link" routerLink="/">Application</a>
-  <span class="example-spacer"></span>
   <div class="link-menu">
-    <a routerLink="/" class="page-link" mat-button color="primary">Home page</a>
+    <a routerLink="/" class="page-link" mat-button color="primary">Application</a>
   </div>
+  
+  <span class="example-spacer"></span>
+
   <a routerLink="/login" class="button-signup" mat-raised-button>Sign in</a>
 </mat-toolbar>
 
