--- a/src/app/features/trainings/components/article-card/article-card.component.scss
+++ b/src/app/features/trainings/components/article-card/article-card.component.scss
@@ -7,6 +7,7 @@ $basic-color: #c1e9fc;
     box-sizing: border-box;
 }
 mat-card{
+    width: 45vw;
     margin-bottom: 30px;
     display: flex;
     flex-direction: column;
