--- a/src/app/features/trainings/trainings.component.html
+++ b/src/app/features/trainings/trainings.component.html
@@ -5,11 +5,11 @@
   </div>
   <div class="info-container">
     <h2>Mental Health</h2>
-    <div *ngFor="let item of articles ">
+    <div *ngFor='let item of articles | async'>
       <app-article-card [title]="item.title" [description]="item.description"
-        (click)="openDialog(item.title, item.description,item.fullDescription,item.createdDate) ">
+        (click)="openDialog(item)">
       </app-article-card>
-    </div>
+  </div>
   </div>
 </div>
 
