--- a/src/app/features/trainings/trainings.component.scss
+++ b/src/app/features/trainings/trainings.component.scss
@@ -6,7 +6,7 @@ body {
     background: var(--gradient);
     position: relative;
     z-index: 0;
-padding-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .info-container {
@@ -32,6 +32,7 @@ padding-bottom: 20px;
     height: 600px;
 
     img {
-        width: 600px;
+        width: 800px;
+        min-width: 400px;
     }
 }
