--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -1,22 +1,22 @@
 <app-header [context]="'profile'"></app-header>
 <div class="container-body">
     <div class="profile-info-container">
-        <div class="image-container">
+        <div class="image-container" >
             <img src={{profileImage}} alt="">
         </div>
         <div class="user-info-container">
             <div class="user-info">
                 <div class="user-info-item">
                     <h2>Name:</h2>
-                    <h2>{{user.name}}</h2>
+                    <h2 *ngFor='let  user async'>{{user.name}}</h2>
                 </div>
                 <div class="user-info-item">
                     <h3>Birthday:</h3>
-                    <h3>{{user.birthday}}</h3>
+                    <h3 *ngFor='let  user async'>{{user.birthday}}</h3>
                 </div>
                 <div class="user-info-item">
                     <p>Country:</p>
-                    <p>{{user.country}}</p>
+                    <p *ngFor='let  user async'>{{user.country}}</p>
                 </div>
             </div>
         </div>
@@ -28,8 +28,8 @@
             <mat-tab label="Setting" class="tab-menu">
                 <div class="tab-content">
                     <app-avatar-panel class="panel" (removeAvatar)="addItem($event)"></app-avatar-panel>
-                    <app-email-panel class="panel" [userEmail]="user.email"></app-email-panel>
-                    <app-password-panel class="panel" [userPas]="user.password"></app-password-panel>
+                    <!-- <app-email-panel class="panel" [userEmail]="user.email"></app-email-panel>
+                    <app-password-panel class="panel" [userPas]="user.password"></app-password-panel> -->
                     <app-additional-panel class="panel"></app-additional-panel>
                 </div>
             </mat-tab>
