--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -26,10 +26,10 @@
         <h2>Profile</h2>
         <mat-tab-group>
             <mat-tab label="Setting" class="tab-menu">
-                <div class="tab-content">
+                <div class="tab-content" *ngFor='let  user async'>
                     <app-avatar-panel class="panel" (removeAvatar)="addItem($event)"></app-avatar-panel>
-                    <!-- <app-email-panel class="panel" [userEmail]="user.email"></app-email-panel>
-                    <app-password-panel class="panel" [userPas]="user.password"></app-password-panel> -->
+                    <app-email-panel class="panel"  [userEmail]="user.email"></app-email-panel>
+                    <app-password-panel class="panel"  [userPas]="user.password"></app-password-panel>
                     <app-additional-panel class="panel"></app-additional-panel>
                 </div>
             </mat-tab>
