added requests for specialists and project info

--- a/src/app/features/homepage/components/info-card/info-card.component.scss
+++ b/src/app/features/homepage/components/info-card/info-card.component.scss
@@ -3,6 +3,7 @@ $basic-color: #c1e9fc;
 
 mat-card {
     margin-bottom: 50px;
+    width: 45vw;
     font-family: 'Cormorant Garamond', serif;}
 
 mat-card-title {
