--- a/src/app/features/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage.component.html
@@ -28,8 +28,8 @@
 
     </div>
 
-    <div class="call-container" *ngFor="let specialists async">
-        <app-call-menu [specialists]="specialists"></app-call-menu>
+    <div class="call-container" >
+        <app-call-menu ></app-call-menu>
     </div>
 </div>
 <app-footer></app-footer>
