--- a/src/app/features/profile/components/additional-panel/additional-panel.component.html
+++ b/src/app/features/profile/components/additional-panel/additional-panel.component.html
@@ -9,7 +9,7 @@
 
             <form class="form">
                 <mat-form-field>
-                    <mat-select required>
+                    <mat-select required [formControl]="GenderFormControl">
                         <mat-option value="male">Male</mat-option>
                         <mat-option value="female">Female</mat-option>
                     </mat-select>
@@ -18,12 +18,12 @@
 
                 <div>
                     <mat-select-country label="Country" [formControl]="countryFormControl"
-                        (onCountrySelected)="onCountrySelected($event)"></mat-select-country>
+                        ></mat-select-country>
 
                 </div>
                 <mat-form-field *ngIf="!isBirthdaySet">
                     <mat-label>Enter Your Birthday:</mat-label>
-                    <input matInput [formControl]="BirthdayFormControl" [matDatepicker]="picker">
+                    <input matInput [max]="maxDate"  [formControl]="BirthdayFormControl" [matDatepicker]="picker">
                     <mat-hint>MM/DD/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
