--- a/src/app/features/profile/components/additional-panel/additional-panel.component.html
+++ b/src/app/features/profile/components/additional-panel/additional-panel.component.html
@@ -10,8 +10,8 @@
             <form class="form">
                 <mat-form-field>
                     <mat-select required [formControl]="GenderFormControl">
-                        <mat-option value="male">Male</mat-option>
-                        <mat-option value="female">Female</mat-option>
+                        <mat-option value="Male">Male</mat-option>
+                        <mat-option value="Female">Female</mat-option>
                     </mat-select>
                     <mat-label>Choose Your Gender:</mat-label>
                 </mat-form-field>
